--- a/backend/static/css/dashboard.css
+++ b/backend/static/css/dashboard.css
@@ -7,7 +7,7 @@ body {
 .sidebar {
     width: 220px;
     height: 100vh;
-    background: #007bff;
+    background: #000000;
     color: white;
     padding: 15px;
     position: fixed;
@@ -69,4 +69,21 @@ canvas {
         margin-left: 0;
         padding: 10px;
     }
+}
+
+
+.nav-link {
+
+    color: white;
+    transition: 100ms;
+}
+
+
+.nav-link:hover {
+
+    transform: scale(1.1);
+    transition: 100ms;
+    background-color: #f8f9fa;
+    color: black;
+   
 }
