--- a/backend/templates/dashboard.html
+++ b/backend/templates/dashboard.html
@@ -9,16 +9,28 @@
 </head>
 <body>
 
+    
+
+
     <!-- Sidebar -->
-    <div class="sidebar">
-        <h2 class="fw-bold text-center mt-3">Dashboard</h2>
-        <nav class="nav flex-column mt-4">
-            <a href="#" class="nav-link text-white">Overview</a>
-            <a href="#" class="nav-link text-white">Results</a>
-            <a href="#" class="nav-link text-white">Ballot</a>
-            <a href="#" class="nav-link text-white">Voters</a>
-        </nav>
-    </div>
+        <div class="sidebar">
+            <h2 class="fw-bold text-center mt-3">Dashboard</h2>
+                <nav class="nav flex-column mt-4">
+
+                    
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <a class="nav-link active"  href="/home">Home</a>
+                    <a class="nav-link"  href="/elections">Elections</a>
+                    <a class="nav-link"  href="/dashboard">Dashboard</a>
+                    <a class="nav-link"  href="/vote">Vote</a>
+                    <a class="nav-link"  href="/working">How It Works</a>
+                    <a class="nav-link"  href="/contact">Contact</a>
+                
+                </nav>
+        </div>
 
     <!-- Main Content -->
     <div class="content">
