--- a/backend/static/css/elections.css
+++ b/backend/static/css/elections.css
@@ -12,3 +12,35 @@
     font-size: 14px;
     text-align: center;
 }
+
+
+.container-main {
+
+    margin-top: 80px;
+}
+
+
+
+
+.navbar {
+    background: rgba(0, 0, 0, 0.8); /* Semi-transparent black */
+    padding: 15px 0;
+}
+
+.navbar-brand {
+    font-size: 1.5rem;
+}
+
+.nav-link {
+    font-size: 1.1rem;
+    margin-left: 10px;
+}
+
+.nav-link:hover {
+    color: #ffc107 !important; /* Highlight color */
+}
+
+.btn-outline-light {
+    border-radius: 20px;
+    padding: 8px 20px;
+}
