--- a/backend/templates/elections.html
+++ b/backend/templates/elections.html
@@ -8,7 +8,44 @@
     <link rel="stylesheet" href="/static/css/elections.css">
 </head>
 <body>
-    <div class="container mt-4">
+
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="/">🗳 Secure E-Voting</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/elections">Elections</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/dashboard">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/vote">Vote</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/working">How It Works</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+
+
+    <div class="container-main mt-4">
         <h2 class="mb-4">Latest Political News in India</h2>
         <div class="row" id="news-container"></div>
     </div>
