--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    
+    <meta name="csrf-token" content="{{ csrf_token }}"> 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/login.css"> <!-- Link to external CSS -->
@@ -21,20 +21,21 @@
 
             <div id="error-message" class="alert alert-danger d-none"></div>
 
-            <form id="login-form">
+            <form id="login-form" action="{% url 'user_login' %}" method="post">
+                {% csrf_token %}
                 <div class="mb-3 input-group">
                     <span class="input-group-text"><i class="fas fa-user"></i></span>
-                    <input type="text" id="username" class="form-control" placeholder="Username" required>
+                    <input type="text" id="username" class="form-control" placeholder="Username" name = "username" required>
                 </div>
 
                 <div class="mb-3 input-group">
                     <span class="input-group-text"><i class="fas fa-id-card"></i></span>
-                    <input type="text" id="voter_id" class="form-control" placeholder="Voter ID" required>
+                    <input type="text" id="voter_id" class="form-control" placeholder="Voter ID" name = "voter_id" required>
                 </div>
 
                 <div class="mb-3 input-group">
                     <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                    <input type="password" id="password" class="form-control" placeholder="Password" required>
+                    <input type="password" id="password" class="form-control" placeholder="Password" name = "password" required>
                 </div>
 
                 <button type="submit" class="btn btn-primary w-100">Login</button>
@@ -46,6 +47,6 @@
         </div>
     </div>
 
-    <script src="/static/js/login.js"></script> <!-- JavaScript file -->
+    <!-- <script src="/static/js/login.js"></script>  -->
 </body>
 </html>
