--- a/backend/templates/dashboard.html
+++ b/backend/templates/dashboard.html
@@ -41,25 +41,25 @@
             <div class="col-6 col-md-3">
                 <div class="card bg-success card-custom">
                     <p>Participation</p>
-                    <h3>64%</h3>
+                    <input type="text" id="participation"  style="background-color: transparent;border: transparent;color: white;text-align: center;font-size: x-large;font-weight:700;" disabled>
                 </div>
             </div>
             <div class="col-6 col-md-3">
                 <div class="card bg-danger card-custom">
                     <p>Total Voters</p>
-                    <h3>1,961</h3>
+                    <input type="text" id="t_voters"  style="background-color: transparent;border: transparent;color: white;text-align: center;font-size: x-large;font-weight:700;" disabled>
                 </div>
             </div>
             <div class="col-6 col-md-3">
                 <div class="card bg-warning card-custom">
                     <p>Ballot Questions</p>
-                    <h3>2</h3>
+                    <input type="text" id="Ballot" value="2" style="background-color: transparent;border: transparent;color: white;text-align: center;font-size: x-large;font-weight:700;" disabled>
                 </div>
             </div>
             <div class="col-6 col-md-3">
                 <div class="card bg-secondary card-custom">
                     <p>Options</p>
-                    <h3>266</h3>
+                    <input type="text" id="options" style="background-color: transparent;border: transparent;color: white;text-align: center;font-size: x-large;font-weight:700;" disabled>
                 </div>
             </div>
         </div>
